refactor: 메뉴목록 조회 API 가게 상세 정보 조회 API로 통합